# Zealous

./: main.py  pyproject.toml
Cyno/: .env.example  T.py  archi  arg.py  cynogameintergration.py  cynomemories.json  gameintergration.py  glados_tts.py  memories.json  pyproject.toml
Cyno-1.0-main/: CynoBot.py  CynoServer.py  README.md  legacy.md
IRIS_PROJECT/: .env.example  SOUL.md  database-test.py  main.py  memories.json  pyproject.toml  soulBackup.md
terminal_cyno/: BT7274.onnx  config.yaml  cyno.py  index.html  main.py  memories.json  pyproject.toml  tts.py
