[project]
name = "iris-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.10.0",
    "py-cord[voice]>=2.6.0",
    "pynacl>=1.5.0",
    "dotenv>=0.9.9",
    "faster-whisper>=1.2.1",
    "ollama>=0.6.1",
    "scipy>=1.17.1",
    "dave-py>=0.1.2",
]

